--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,35 @@
 <p id="notice"><%= notice %></p>
 
+<bar style="position:fixed;left:0px;top:0px;width:100%;height:55px;"></bar>
+<bar style="position:fixed;left:0px;bottom:0px;width:100%;height:40px;"></bar>
+<div style="margin: 0px auto;width:960px;">
+<bar style="position:fixed;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:80px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:160px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:240px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:320px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:400px;top:0px;width:160px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:560px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:640px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:720px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:800px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:880px;top:0px;width:80px;height:55px;"></bar>
+</div>
+<div style="margin: 0px auto;width:960px;">
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
 <p>
   <b>Name:</b>
   <%= @user.name %>
