--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,2 +1,36 @@
-<h1>StaticPages#home</h1>
-<p>Find me in app/views/static_pages/home.html.erb</p>
+<bar style="position:fixed;left:0px;top:0px;width:100%;height:55px;"></bar>
+<bar style="position:fixed;left:0px;bottom:0px;width:100%;height:40px;"></bar>
+<div style="margin: 0px auto;width:960px;">
+<bar style="position:fixed;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:80px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:160px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:240px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:320px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:400px;top:0px;width:160px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:560px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:640px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:720px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:800px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:880px;top:0px;width:80px;height:55px;"></bar>
+</div>
+
+
+<div style="margin: 0px auto;width:960px;">
+<bar data-toggle="modal" href="#myModal" style="position:fixed;bottom:5px;width:80px;height:30px;">
+Enter
+</bar>
+</div>
+
+<div class="modal hide" id="myModal">
+  <div class="modal-header">
+    <button type="button" class="close" data-dismiss="modal">×</button>
+    <h3>Modal header</h3>
+  </div>
+  <div class="modal-body">
+    <p>One fine body…</p>
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn" data-dismiss="modal">Close</a>
+    <a href="#" class="btn btn-primary">Save changes</a>
+  </div>
+</div>
