--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,11 +4,16 @@
   <title>Feminine</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
+  <%= javascript_include_tag "jquery-1.4.4.min" %>
+
   <%= csrf_meta_tags %>
+
 </head>
 <body>
 
 <%= yield %>
+
+
 
 </body>
 </html>
