--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title>Feminine</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
-  <%= javascript_include_tag "jquery-1.4.4.min" %>
+  <%= javascript_include_tag "bootstrap-modal" %>
 
   <%= csrf_meta_tags %>
 
