--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,8 @@
   <%= stylesheet_link_tag    "bootstrap", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= javascript_include_tag "bootstrap-modal" %>
+  <%= javascript_include_tag "jquery.min" %>
+  <%= javascript_include_tag "jquery.masonry.min" %>
 
   <%= csrf_meta_tags %>
 
