--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,5 +1,7 @@
 
 <div class="item">
+
+  <span><%= image_tag micropost.image_url.to_s %></span>
   <span class="content"><%= micropost.content %></span>
   <span class="timestamp">
     Posted <%= time_ago_in_words(micropost.created_at) %> ago.
@@ -18,9 +20,7 @@
 	<% micropost.comments.each do |comment| %>
 	<%= comment.body %>
 	
-	<% if signed_in? and comment.user_id == current_user.id %>
-        <span><%= link_to 'delete', micropost_comment_path(@micropost, comment), :confirm => 'Are you sure?', :method => :delete, :class => "" %></span>
-    <% end %>
+
 
 	<% end %>
 	</div>
