--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -2,6 +2,7 @@
     <span class="user">
       <%= link_to feed_item.user.name, feed_item.user %>
     </span>
+	<span><%= image_tag feed_item.image_url.to_s %></span>
     <span class="content"><%= feed_item.content %></span>
     <span class="timestamp">
       Posted <%= time_ago_in_words(feed_item.created_at) %> ago.
