--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -1,5 +1,6 @@
-<%= form_for(@micropost) do |f| %>
+<%= form_for @micropost, :html => {:multipart => true} do |f| %>
   <%= render 'shared/error_messages', object: f.object %>
+	<%= f.file_field :image %>
   <div class="field">
     <%= f.text_area :content, placeholder: "Compose new micropost..." %>
   </div>
