--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,10 +3,12 @@
 
 <div class="row">
   <div class="span6 offset3">
-    <%= form_for(@user) do |f| %>
+	<%= form_for @user, :html => {:multipart => true} do |f| %>
 
       <%= f.label :name %>
       <%= f.text_field :name %>
+
+	  <%= f.file_field :image %>
 
       <%= f.label :email %>
       <%= f.text_field :email %>
