--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,7 @@
 <bar style="position:fixed;left:0px;bottom:0px;width:100%;height:40px;">
 		<% if signed_in? %>
 	<%= link_to "Sign out", signout_path, method: "delete" %>
+	
 	<li><%= link_to "Settings", edit_user_path(current_user) %></li>
 		<% end %>
 </bar>
@@ -13,9 +14,10 @@
 <bar style="position:fixed;margin-left:160px;top:0px;width:80px;height:55px;"></bar>
 <bar style="position:fixed;margin-left:240px;top:0px;width:80px;height:55px;"></bar>
 <bar style="position:fixed;margin-left:320px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:400px;top:0px;width:160px;height:55px;">
+<bar style="position:fixed;margin-left:400px;top:0px;width:160px;height:55px;z-index:100;">
 	<section>
 	  <%= render 'shared/stats' %>
+	  <%= image_tag @user.image_url.to_s %>
 	</section>
 </bar>
 <bar style="position:fixed;margin-left:560px;top:0px;width:80px;height:55px;"></bar>
