--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,6 +4,7 @@
 
 
 bar {
+	z-index:100;
 	background-image: linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
 	background-image: -o-linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
 	background-image: -moz-linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
@@ -17,7 +18,7 @@ bar {
 		color-stop(0.22, rgb(89,5,44)),
 		color-stop(1, rgb(226,30,122))
 	);
-	border: 1px solid #E21E79;
+	border: 1px solid #620631;
 }
 
 body {
@@ -26,8 +27,9 @@ overflow-y: scroll;
 }
 
 .item {
-  background:white;
+  background:black;
   width: 220px;
   margin: 10px;
   float: left;
+  box-shadow: 0px 4px 4px 0px #0071BC;
 }
