--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -44,6 +44,65 @@ a:hover,
 a:active {
   outline: 0;
 }
+
+
+bar {
+	
+	z-index:100;
+	background-image: linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
+	background-image: -o-linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
+	background-image: -moz-linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
+	background-image: -webkit-linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
+	background-image: -ms-linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
+
+	background-image: -webkit-gradient(
+		linear,
+		left bottom,
+		left top,
+		color-stop(0.22, rgb(89,5,44)),
+		color-stop(1, rgb(226,30,122))
+	);
+	border: 1px solid #620631;
+}
+
+bar:hover {
+	background:#59052C;
+}
+
+body {
+  padding-top: 60px;
+overflow-y: scroll;
+}
+
+.item {
+  background:black;
+  width: 210px;
+  margin: 10px;
+  margin-bottom:35px;
+  float:left;
+  border: 5px solid #1D1D1D;
+  box-shadow: 0px 2px 2px 0px #E21E79;
+}
+
+.content {
+	background:white;
+	color:black;
+	font-size:18px;
+	font-weight:bold;
+	text-align:center;
+	padding:10px;
+}
+
+.main {
+	z-index:99;
+}
+
+.links {
+	z-index:0;
+}
+
+
+
 sub,
 sup {
   position: relative;
@@ -391,7 +450,7 @@ h2 small {
   font-size: 18px;
 }
 h3 {
-  font-size: 18px;
+  font-size: 14px;
   line-height: 27px;
 }
 h3 small {
