--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -6,5 +6,8 @@
   </div>
 <%= f.label :tags %>
 <%= f.text_field :tag_list %>
+<%= f.label :kyahai %>
+<%= f.text_field :kyahai %>
   <%= f.submit "Post", class: "btn btn-large btn-primary" %>
 <% end %>
+
