--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,7 @@
 <bar style="position:fixed;left:0px;top:0px;width:100%;height:55px;"></bar>
-<bar style="position:fixed;left:0px;bottom:0px;width:100%;height:40px;"></bar>
+<bar style="position:fixed;left:0px;bottom:0px;width:100%;height:40px;">
+	
+</bar>
 <div style="margin: 0px auto;width:960px;">
 <bar style="position:fixed;top:0px;width:80px;height:55px;"></bar>
 <bar style="position:fixed;margin-left:80px;top:0px;width:80px;height:55px;"></bar>
@@ -23,6 +25,7 @@
 <bar data-toggle="modal" href="#entermodal" style="position:fixed;bottom:5px;margin-left:440px;width:80px;height:30px;">
 Enter
 </bar>
+
 </div>
 
 <% if signed_in? %>
@@ -131,7 +134,7 @@ $(function(){
     // options
 	isFitWidth: true,
     itemSelector : '.item',
-    columnWidth : 240
+    columnWidth : 250
   });
 });
 </script>
