--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -22,8 +22,8 @@
 
 
 <div style="margin: 0px auto;width:960px;">
-<bar data-toggle="modal" href="#entermodal" style="position:fixed;bottom:5px;margin-left:440px;width:80px;height:30px;">
-Enter
+<bar data-toggle="modal" href="#entermodal" style="border:0px;position:fixed;bottom:0px;margin-left:400px;width:160px;height:41px;">
+<h2>F E M Y N Y N<h2>
 </bar>
 
 </div>
@@ -127,7 +127,7 @@ $(function(){
     // options
 	isFitWidth: true,
     itemSelector : '.item',
-    columnWidth : 250
+    columnWidth : 240
   });
 });
 </script>
