--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -10,17 +10,17 @@
 
 
   
-  <bar style="position:absolute;width:50px;height:28px;"></bar>
+  <barr style="position:absolute;width:50px;height:28px;"></barr>
 
   <span style="position:absolute;">
   <%= link_to micropost.user do %>
-  <bar style="position:absolute;margin-left:50px;width:108px;height:28px;text-align:center;"><h3><%= micropost.user.name %></h3></bar>
+  <barr style="position:absolute;margin-left:50px;width:108px;height:28px;text-align:center;"><h3><%= micropost.user.name %></h3></barr>
   <% end %>
   </span>	
 
   <span style="position:absolute;">
   <%=  link_to vote_up_micropost_path(micropost.id) do %> 
-  <bar style="position:absolute;margin-left:158px;width:50px;height:28px;text-align:center;"><h3><%= micropost.votes_for %></h3></bar>	
+  <barr style="position:absolute;margin-left:158px;width:50px;height:28px;text-align:center;"><h3><%= micropost.votes_for %></h3></barr>	
   <% end %>
   </span>
 
