--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -1,15 +1,18 @@
 <% @user ||= current_user %>
 <div class="stats">
-  <a href="<%= following_user_path(@user) %>">
-    <strong id="following" class="stat">
+	
+  <span href="<%= following_user_path(@user) %>" style="text-align:center;position:absolute;margin-left:5px;color:#CC337A;">
+    <h1 id="following" class="stat">
       <%= @user.followed_users.count %>
-    </strong>
-    following
-  </a>
-  <a href="<%= followers_user_path(@user) %>">
-    <strong id="followers" class="stat">
+    </h1>
+    <h5>following</h5>
+  </span>
+
+  <span href="<%= followers_user_path(@user) %>" style="text-align:center;position:absolute;margin-left:114px;">
+    <h1 id="followers" class="stat">
       <%= @user.followers.count %>
-    </strong>
-    followers
-  </a>
+    </h1>
+    <h5>followers</h5>
+  </span>
+
 </div>
