--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -80,7 +80,23 @@ barr {
 		color-stop(0.22, rgb(89,5,44)),
 		color-stop(1, rgb(226,30,122))
 	);
-	border: 1px solid #620631;
+
+}
+
+barr:hover {
+	
+background:#59052C;
+}
+
+bar1 {
+	background:#953361;
+	z-index:99;
+
+}
+
+bar1:hover {
+	background:#76284D;
+
 }
 
 bar:hover {
@@ -88,7 +104,7 @@ bar:hover {
 }
 
 body {
-  padding-top: 60px;
+  padding-top: 100px;
 overflow-y: scroll;
 }
 
