--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -10,7 +10,7 @@
 
 
   
-  <barr style="position:absolute;width:50px;height:28px;"></barr>
+  <barr style="position:absolute;width:50px;height:28px;text-align:center;"><h3>+</h3></barr>
 
   <span style="position:absolute;">
   <%= link_to micropost.user do %>
