--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -8,7 +8,7 @@
 
 
 
-	  <barr style="position:absolute;width:50px;height:28px;"></barr>
+	  <barr style="position:absolute;width:50px;height:28px;text-align:center;"><h3>+</h3></barr>
 
 	  <span style="position:absolute;">
 	  <%= link_to feed_item.user do %>
