--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -18,18 +18,37 @@
 <bar style="position:fixed;margin-left:720px;top:0px;width:80px;height:55px;"></bar>
 <bar style="position:fixed;margin-left:800px;top:0px;width:80px;height:55px;"></bar>
 <bar style="position:fixed;margin-left:880px;top:0px;width:80px;height:55px;"></bar>
-</div>
+
+
+<bar1 style="position:fixed;margin-left:320px;top:55px;width:106px;height:40px;"></bar1>
+<bar1 style="position:fixed;margin-left:426px;top:55px;width:108px;height:40px;"></bar1>
+<bar1 style="position:fixed;margin-left:534px;top:55px;width:106px;height:40px;"></bar1>
+
+<bar1 style="right:160px;position:fixed;margin-left:720px;top:55px;width:80px;height:40px;"></bar1>
+<bar1 style="right:80px;position:fixed;margin-left:800px;top:55px;width:80px;height:40px;"></bar1>
+<bar1 style="right:0px;position:fixed;margin-left:880px;top:55px;width:80px;height:40px;"></bar1>
+<bar1 style="right:0px;position:fixed;margin-left:720px;top:96px;width:240px;height:100%;background:#76284D;z-index:0;">
+	
+</bar1>
+
 
 
 <div style="margin: 0px auto;width:960px;">
 <bar data-toggle="modal" href="#entermodal" style="border:0px;position:fixed;bottom:0px;margin-left:400px;width:160px;height:41px;">
 <h2>F E M Y N Y N<h2>
 </bar>
-
 </div>
 
 <% if signed_in? %>
-<div style="margin: 0 auto;"id="container">
+<div style="position:absolute; margin: 0 auto;"id="container">
+
+  <%= render 'shared/feed' %>
+</div>
+<% end %>
+
+
+<% if signed_in? %>
+<div style="position:absolute;right:25px; width:240px;"id="container">
 
   <%= render 'shared/feed' %>
 </div>
