--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,9 +29,22 @@
 <div style="margin: 0px auto;width:960px;">
 </div>
 
+<bar1 style="position:fixed;margin-left:322px;top:55px;width:106px;height:40px;"></bar1>
+<%= link_to root_path do %><bar1 style="position:fixed;margin-left:428px;top:55px;width:108px;height:40px;"></bar1><% end %>
+<%= link_to current_user do %><bar1 style="position:fixed;margin-left:536px;top:55px;width:106px;height:40px;"></bar1><% end %>
+
+
+<bar1 style="right:160px;position:fixed;margin-left:720px;top:55px;width:80px;height:40px;"></bar1>
+<bar1 style="right:80px;position:fixed;margin-left:800px;top:55px;width:80px;height:40px;"></bar1>
+<bar1 style="right:0px;position:fixed;margin-left:880px;top:55px;width:80px;height:40px;"></bar1>
+<div style="right:0px;position:fixed;margin-left:720px;top:96px;width:240px;height:100%;background:#76284D;z-index:0;">
+	
+</div>
+
+
 <div style="margin: 0px auto;width:960px;">
 <bar data-toggle="modal" href="#entermodal" style="border:0px;position:fixed;bottom:0px;margin-left:400px;width:160px;height:41px;">
-<h2>F E M Y N Y N<h2>
+<h2 style="text-align:center;">FEMYNYN<h2>
 </bar>
 
 </div>
