--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,12 +1,17 @@
 
-<span><%= render Micropost.tagged_with(["health", "beauty"], :any => true)  %></span>
-
-<span><%= render Micropost.where(kyahai: "3")  %></span>
 
 
-<% form_tag microposts_path, :method => 'get' do %>
-  <p>
-    <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "Search", :name => nil %>
-  </p>
-<% end %>
+
+
+
+
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="span10">
+      <span><%= render Micropost.tagged_with(["health", "beauty"], :any => true)  %></span>
+    </div>
+    <div class="span2">
+     <span><%= render Micropost.tagged_with(["health", "beauty"], :any => true)  %></span>
+    </div>
+  </div>
+</div>
