--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= javascript_include_tag "application" %>
 
   <%= javascript_include_tag "jquery-1.8.0.min" %>
+  <%= javascript_include_tag "jquery-ui-1.8.23.custom.min" %>
   <%= javascript_include_tag "jquery.masonry.min" %>
 
   <%= csrf_meta_tags %>
