--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -1,6 +1,9 @@
 
 <div class="item" >
 
+<%= modal_link('Sign up', "myModal1") %>
+
+
 
 
   <span ><%= image_tag micropost.image_url.to_s if micropost.image? %></span>
@@ -9,7 +12,13 @@
   <% end %>
 
 
-  
+
+
+
+
+
+
+
   <barr style="position:absolute;width:50px;height:28px;text-align:center;"><h3>+</h3></barr>
 
   <span style="position:absolute;">
@@ -26,3 +35,6 @@
 
 
 </div>
+
+
+
