--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,12 @@
-<p id="notice"><%= notice %></p>
-
 <bar style="position:fixed;left:0px;top:0px;width:100%;height:55px;"></bar>
 <bar style="position:fixed;left:0px;bottom:0px;width:100%;height:40px;">
 		<% if signed_in? %>
 	<%= link_to "Sign out", signout_path, method: "delete" %>
 	
 	<li><%= link_to "Settings", edit_user_path(current_user) %></li>
+	
 		<% end %>
+		
 </bar>
 <div style="margin: 0px auto;width:960px;">
 <bar style="position:fixed;top:0px;width:80px;height:55px;"></bar>
@@ -28,7 +28,7 @@
 </div>
 <div style="margin: 0px auto;width:960px;">
 </div>
-
+<div style="margin: 0px auto;width:960px;">
 <bar1 style="position:fixed;margin-left:322px;top:55px;width:106px;height:40px;"></bar1>
 <%= link_to root_path do %><bar1 style="position:fixed;margin-left:428px;top:55px;width:108px;height:40px;"></bar1><% end %>
 <%= link_to current_user do %><bar1 style="position:fixed;margin-left:536px;top:55px;width:106px;height:40px;"></bar1><% end %>
@@ -37,7 +37,7 @@
 <bar1 style="right:160px;position:fixed;margin-left:720px;top:55px;width:80px;height:40px;"></bar1>
 <bar1 style="right:80px;position:fixed;margin-left:800px;top:55px;width:80px;height:40px;"></bar1>
 <bar1 style="right:0px;position:fixed;margin-left:880px;top:55px;width:80px;height:40px;"></bar1>
-<div style="right:0px;position:fixed;margin-left:720px;top:96px;width:240px;height:100%;background:#76284D;z-index:0;">
+<div style="right:0px;position:fixed;margin-left:720px;top:96px;width:240px;height:100%;background:#76284D;z-index:-10;">
 	
 </div>
 
@@ -46,8 +46,9 @@
 <bar data-toggle="modal" href="#entermodal" style="border:0px;position:fixed;bottom:0px;margin-left:400px;width:160px;height:41px;">
 <h2 style="text-align:center;">FEMYNYN<h2>
 </bar>
-
 </div>
+
+
 <% @micropost  = current_user.microposts.build %>
 <% if signed_in? %>
 <section>
@@ -61,10 +62,12 @@
   <%= render 'follow_form' if signed_in? %>
   <% if @user.microposts.any? %>
 
-<div style="margin: 0px auto;width:960px;"id="container">
-
+<div style="position:absolute;margin-right:240px;left:1%;" id="container">
   <%= render @microposts %>
+</div>
 
+<aside style="position:absolute;">
+  <%= render @microposts %>	
 </div>
   <% end %>
 
@@ -75,7 +78,7 @@
 <script type="text/javascript">
 $(function(){
   $('#container').masonry({
-    // options
+
     itemSelector : '.item',
     columnWidth : 240;
   });
