--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,49 @@
+<bar style="position:fixed;left:0px;top:0px;width:100%;height:55px;"></bar>
+<bar style="position:fixed;left:0px;bottom:0px;width:100%;height:40px;">
+	<% if signed_in? %>
+	<%= link_to "Sign out", signout_path, method: "delete" %>
+	<%= link_to "Settings", edit_user_path(current_user) %>
+	<% end %>	
+</bar>
+<div style="margin: 0px auto;width:960px;">
+<bar style="position:fixed;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:80px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:160px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:240px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:320px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:400px;top:0px;width:160px;height:55px;z-index:100;">
+	<section>
+	  <%= render 'shared/stats' %>
+	  <%= image_tag @user.image.to_s if @user.image? %>
+	</section>
+</bar>
+<bar style="position:fixed;margin-left:560px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:640px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:720px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:800px;top:0px;width:80px;height:55px;"></bar>
+<bar style="position:fixed;margin-left:880px;top:0px;width:80px;height:55px;"></bar>
+</div>
+<div style="margin: 0px auto;width:960px;">
+<bar1 style="position:fixed;margin-left:322px;top:55px;width:106px;height:40px;"></bar1>
+<%= link_to root_path do %><bar1 style="position:fixed;margin-left:428px;top:55px;width:108px;height:40px;"></bar1><% end %>
+<%= link_to current_user do %><bar1 style="position:fixed;margin-left:536px;top:55px;width:106px;height:40px;"></bar1><% end %>
+
+<bar1 style="right:160px;position:fixed;margin-left:720px;top:55px;width:80px;height:40px;"></bar1>
+<bar1 style="right:80px;position:fixed;margin-left:800px;top:55px;width:80px;height:40px;"></bar1>
+<bar1 style="right:0px;position:fixed;margin-left:880px;top:55px;width:80px;height:40px;"></bar1>
+<div style="right:0px;position:fixed;margin-left:720px;top:96px;width:240px;height:100%;background:#76284D;z-index:-10;"></div>	
+</div>
+<div style="margin: 0px auto;width:960px;">
+<bar data-toggle="modal" href="#entermodal" style="border:0px;position:fixed;bottom:0px;margin-left:400px;width:160px;height:41px;">
+<h2 style="text-align:center;">FEMYNYN<h2>
+</bar>
+</div>
 
 
-
-
-<div style="clear:both;">
+	
 <% if signed_in? %>
-<div style="position:absolute;margin-right:240px;left:1%;" id="container">
-  	<% if @feed_items.any? %>
-	    <%= render partial: 'shared/feed_item',  collection: @feed_items %>
-	<% end %>
+<div id="container" style="margin-right:240px;margin-left:1%;display:block;">
+   <%= render 'shared/feed' %>
 </div>
 
 <aside style="position:absolute;">
@@ -18,11 +54,7 @@
 
 
 
-<div style="margin: 0px auto;width:960px;">
-<bar data-toggle="modal" href="#entermodal" style="border:0px;position:fixed;bottom:0px;margin-left:400px;width:160px;height:41px;">
-<h2 style="text-align:center;">FEMYNYN<h2>
-</bar>
-</div>
+
 <% if signed_in? %>
 <section>
 <div class="modal hide" id="entermodal" style="height:402px;width:402px;">
@@ -118,43 +150,7 @@
 
 
 
-<bar style="position:fixed;left:0px;top:0px;width:100%;height:55px;"></bar>
-<bar style="position:fixed;left:0px;bottom:0px;width:100%;height:40px;">
-	<% if signed_in? %>
-	<%= link_to "Sign out", signout_path, method: "delete" %>
-	<%= link_to "Settings", edit_user_path(current_user) %>
-	<% end %>	
-</bar>
-<div style="margin: 0px auto;width:960px;">
-<bar style="position:fixed;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:80px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:160px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:240px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:320px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:400px;top:0px;width:160px;height:55px;z-index:100;">
-	<section>
-	  <%= render 'shared/stats' %>
-	  <%= image_tag @user.image.to_s if @user.image? %>
-	</section>
-</bar>
-<bar style="position:fixed;margin-left:560px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:640px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:720px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:800px;top:0px;width:80px;height:55px;"></bar>
-<bar style="position:fixed;margin-left:880px;top:0px;width:80px;height:55px;"></bar>
-</div>
-<div style="margin: 0px auto;width:960px;">
-</div>
-<div style="margin: 0px auto;width:960px;">
-<bar1 style="position:fixed;margin-left:322px;top:55px;width:106px;height:40px;"></bar1>
-<%= link_to root_path do %><bar1 style="position:fixed;margin-left:428px;top:55px;width:108px;height:40px;"></bar1><% end %>
-<%= link_to current_user do %><bar1 style="position:fixed;margin-left:536px;top:55px;width:106px;height:40px;"></bar1><% end %>
 
-<bar1 style="right:160px;position:fixed;margin-left:720px;top:55px;width:80px;height:40px;"></bar1>
-<bar1 style="right:80px;position:fixed;margin-left:800px;top:55px;width:80px;height:40px;"></bar1>
-<bar1 style="right:0px;position:fixed;margin-left:880px;top:55px;width:80px;height:40px;"></bar1>
-<div style="right:0px;position:fixed;margin-left:720px;top:96px;width:240px;height:100%;background:#76284D;z-index:-10;">	
-</div>
 
 
 <script type="text/javascript">
