--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,10 +1,10 @@
-<bar style="position:fixed;left:0px;top:0px;width:100%;height:55px;"></bar>
-<bar style="position:fixed;left:0px;bottom:0px;width:100%;height:40px;">
+<ar style="position:fixed;left:0px;top:0px;width:100%;height:55px;"></ar>
+<ar style="position:fixed;left:0px;bottom:0px;width:100%;height:40px;">
 	<% if signed_in? %>
 	<%= link_to "Sign out", signout_path, method: "delete" %>
 	<%= link_to "Settings", edit_user_path(current_user) %>
 	<% end %>	
-</bar>
+</ar>
 <div style="margin: 0px auto;width:960px;">
 <bar style="position:fixed;top:0px;width:80px;height:55px;"></bar>
 <bar style="position:fixed;margin-left:80px;top:0px;width:80px;height:55px;"></bar>
