--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,10 +8,14 @@
       <%= f.label :name %>
       <%= f.text_field :name %>
 
-	  <%= f.file_field :image %>
+	  <%= f.file_field :avatar %>
 
       <%= f.label :email %>
       <%= f.text_field :email %>
+
+	  <%= f.file_field :image %>
+	  <%= f.file_field :image2 %>
+	  <%= f.file_field :image3 %>
 
       <%= f.label :password %>
       <%= f.password_field :password %>
