--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -63,7 +63,23 @@ square:hover {
 	background:#620631;
 }
 
+ar {
+	z-index:100;
+	background-image: linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
+	background-image: -o-linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
+	background-image: -moz-linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
+	background-image: -webkit-linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
+	background-image: -ms-linear-gradient(bottom, rgb(89,5,44) 22%, rgb(226,30,122) 100%);
 
+	background-image: -webkit-gradient(
+		linear,
+		left bottom,
+		left top,
+		color-stop(0.22, rgb(89,5,44)),
+		color-stop(1, rgb(226,30,122))
+	);
+	border: 1px solid #620631;
+}
 bar {
 	cursor: pointer;cursor: hand;
 	z-index:100;
