--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -46,23 +46,37 @@
 
 <% end %>
 
-<bar1 style="z-index:50;position:absolute;right:240px;margin-top:20px;margin-left:10px;width:180px;height:400px;">
+<ar style="z-index:50;position:absolute;right:240px;margin-top:20px;margin-left:10px;width:180px;height:400px;">
 	<%= image_tag @user.image2_url(:tallavatar) if @user.image2? %>
-</bar1>
-<bar1 style="z-index:50;position:absolute;right:420px;margin-top:20px;margin-left:10px;width:180px;height:400px;">
+</ar>
+<ar style="z-index:50;position:absolute;right:420px;margin-top:20px;margin-left:10px;width:180px;height:400px;">
 	<%= image_tag @user.image3_url(:tallavatar) if @user.image3? %>
-</bar1>
-<bar1 style="z-index:50;position:absolute;right:600px;margin-top:20px;margin-left:10px;width:180px;height:400px;">
+</ar>
+<ar style="z-index:50;position:absolute;right:600px;margin-top:20px;margin-left:10px;width:180px;height:400px;">
 	<%= image_tag @user.image_url(:tallavatar) if @user.image? %>
-</bar1>
-<bar1 style="z-index:50;position:absolute;right:780px;margin-top:20px;margin-left:10px;width:180px;height:200px;">
+</ar>
+<ar style="z-index:50;position:absolute;right:780px;margin-top:20px;margin-left:10px;width:180px;height:200px;">
 	<%= image_tag @user.avatar_url(:lavatar) if @user.avatar? %>
-</bar1>
-<bar1 style="z-index:50;position:absolute;right:785px;margin-top:225px;margin-left:10px;width:175px;height:195px;">
+</ar>
+
+<ar style="z-index:50;position:absolute;right:785px;margin-top:225px;margin-left:10px;width:175px;height:195px;">
+	<% @user ||= current_user %>
+	
+	<span href="<%= following_user_path(@user) %>" style="text-align:center;position:absolute;margin-left:10px;margin-top:130px;">
+    <h1 id="following" class="stat" style="color:white;"><%= @user.followed_users.count %></h1><h5 style="color:white;">following</h5>
+  	</span>
+
+    <span style="text-align:center;position:absolute;margin-top:130px;margin-left:75px;">
+    <h1 style="color:white;"><%= @user.microposts.count %></h1><h5 style="color:white;">posts</h5>
+  	</span>
+
+    <span href="<%= followers_user_path(@user) %>" style="text-align:center;position:absolute;margin-top:130px;margin-left:125px;">
+    <h1 id="followers" class="stat" style="color:white;"><%= @user.followers.count %></h1><h5 style="color:white;">followers</h5>
+  	</span>
+
 	<%= render 'follow_form' if signed_in? %>
-</bar1>
-
-
+	
+</ar>
 
 
   <% if @user.microposts.any? %>
